--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center">
                 <i class="fas fa-blinds text-amber-600 text-3xl mr-3"></i>
-                <img src="/images/logo.jpg" alt="Logo" class="w-full h-full object-cover">
-                <h1 class="text-2xl font-bold text-gray-800">SONATA BLINDS</h1>
+                <img src="/images/logo.jpg" alt="Logo" style="width: 150px;">
             </div>
             <nav class="hidden md:flex space-x-8">
                 <a href="#home" class="nav-link text-gray-700 font-medium hover:text-amber-600">Home</a>
