--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog - Sonata Blinds</title>
+  <meta name="title" content="Sonata Blinds | Premium Window Coverings">
+  <meta name="description" content="Discover premium window treatment solutions with Sonata Blinds. Style, functionality, and top-quality wooden blinds for your home or office.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.sonatablinds.com/">
+  <meta property="og:title" content="Sonata Blinds | Premium Window Coverings">
+  <meta property="og:description" content="Discover premium window treatment solutions with Sonata Blinds. Style, functionality, and top-quality wooden blinds.">
+  <meta property="og:image" content="https://www.sonatablinds.com/images/logo.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://www.sonatablinds.com/">
+  <meta property="twitter:title" content="Sonata Blinds | Premium Window Coverings">
+  <meta property="twitter:description" content="Discover premium window treatment solutions with Sonata Blinds. Style, functionality, and top-quality wooden blinds.">
+  <meta property="twitter:image" content="https://www.sonatablinds.com/images/twitter-card.jpg">
+
+  <!-- Instagram -->
+  <meta property="Instagram:card" content="summary_large_image">
+  <meta property="Instagram:url" content="https://www.instagram.com/sonatablind?igsh=YjM1ajBpbXUzamxl/">
+  <meta property="Instagram:title" content="Sonata Blinds | Premium Window Coverings">
+  <meta property="Instagram:description" content="Discover premium window treatment solutions with Sonata Blinds. Style, functionality, and top-quality wooden blinds.">
+  <meta property="Instagram:image" content="https://www.sonatablinds.com/images/twitter-card.jpg">
+
+
+
+
+
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
