--- a/blog.html
+++ b/blog.html
@@ -64,6 +64,12 @@
             background: #d1a054;
             margin-top: 2px;
         }
+        .hero_Banner {
+            background-color: #294058;
+            align-items: center;
+            text-align: center;
+            padding: 2rem;
+        }
     </style>
 </head>
 <body class="bg-white text-gray-800">
@@ -78,6 +84,7 @@
                 <a href="/index.html" class="nav-link text-gray-700 font-medium hover:text-amber-600">Home</a>
                 <a href="#products" class="nav-link text-gray-700 font-medium hover:text-amber-600">Products</a>
                 <a href="#about" class="nav-link text-gray-700 font-medium hover:text-amber-600">About Us</a>
+                <a href="/blog.html" class="nav-link text-gray-700 font-medium hover:text-amber-600">Updates</a>
                 <a href="#testimonials" class="nav-link text-gray-700 font-medium hover:text-amber-600">Testimonials</a>
                 <a href="#contact" class="nav-link text-gray-700 font-medium hover:text-amber-600">Contact</a>
             </nav>
@@ -98,12 +105,10 @@
     </header>
 
     <!-- Hero Banner -->
-    <section class="bg-[url('/path-to-your-carousel-image.jpg')] bg-cover bg-center text-white py-20 md:py-32">
-        <div class="container mx-auto px-4 text-center bg-black bg-opacity-50 rounded-lg">
-            <h2 class="text-4xl md:text-6xl font-bold mb-4">Inspiration, Tips & Trends</h2>
-            <p class="text-lg md:text-2xl mb-8 max-w-3xl mx-auto">Stay updated with the latest ideas in interior design and window treatment solutions.</p>
-        </div>
-    </section>
+     <section class="text-white hero_Banner">
+        <h2 class="text-4xl md:text-6xl font-bold mb-4">Inspiration, Tips & Trends</h2>
+        <p class="text-lg">Stay updated with the latest ideas in interior design and window treatment solutions.</p>
+     </section>
 
     <!-- Blog Posts -->
     <section id="articles" class="py-16 px-4 container mx-auto">
