--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sonata Blinds - Premium Window Covering Solutions</title>
+    <meta name="title" content="Sonata Blinds | Premium Window Coverings">
+    <meta name="description" content="Discover premium window treatment solutions with Sonata Blinds. Style, functionality, and top-quality wooden blinds for your home or office.">
+
 
       <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
@@ -74,6 +77,7 @@
                 <a href="#home" class="nav-link text-gray-700 font-medium hover:text-amber-600">Home</a>
                 <a href="#products" class="nav-link text-gray-700 font-medium hover:text-amber-600">Products</a>
                 <a href="#about" class="nav-link text-gray-700 font-medium hover:text-amber-600">About Us</a>
+                <a href="/blog.html" class="nav-link text-gray-700 font-medium hover:text-amber-600">Updates</a>
                 <a href="#testimonials" class="nav-link text-gray-700 font-medium hover:text-amber-600">Testimonials</a>
                 <a href="#contact" class="nav-link text-gray-700 font-medium hover:text-amber-600">Contact</a>
             </nav>
