--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       
           <!-- Carousel -->
           <div class="flex gap-4 overflow-x-auto justify-center px-2">
-            <img src="https://source.unsplash.com/featured/?wooden-blinds" alt="Wooden Blinds"
+            <img src="/images/Wooden_Hero_Banner.png" alt="Wooden Blinds"
                  class="rounded-lg shadow-lg h-48 min-w-[180px] hover:scale-105 transition-transform duration-300" />
             <img src="https://source.unsplash.com/featured/?roller-blinds" alt="Roller Blinds"
                  class="rounded-lg shadow-lg h-48 min-w-[180px] hover:scale-105 transition-transform duration-300" />
