--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
 
     <!-- Map Section -->
     <div class="h-96 w-full">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3498.685620627183!2d77.16467011056714!3d28.728939879595398!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6abfebb5dd1fcbf1%3A0x5267c7763d5812d3!2sSonatablinds!5e0!3m2!1sen!2sin!4v1748083723176!5m2!1sen!2sin" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3498.685620627183!2d77.16467011056714!3d28.728939879595398!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6abfebb5dd1fcbf1%3A0x5267c7763d5812d3!2sSonatablinds!5e0!3m2!1sen!2sin!4v1748083723176!5m2!1sen!2sin" width="800" height="382" style="border:0;width: 100%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
     <!-- Footer -->
