--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
             background: #d1a054;
             margin-top: 2px;
         }
+        .text_color_black {
+            color: black;
+            font-family: 'Inter', sans-serif;
+            font-weight: 800;
+        }
     </style>
 </head>
 <body class="bg-black text-white">
@@ -133,7 +138,7 @@
           <div class="flex gap-4 overflow-x-auto justify-center px-2">
             <img src="/images/Wooden_Hero_Banner.png" alt="Wooden Blinds"
                  class="rounded-lg shadow-lg h-48 min-w-[180px] hover:scale-105 transition-transform duration-300" />
-            <img src="https://source.unsplash.com/featured/?roller-blinds" alt="Roller Blinds"
+            <img src="/images/Roller_hero_banner.png" alt="Roller Blinds"
                  class="rounded-lg shadow-lg h-48 min-w-[180px] hover:scale-105 transition-transform duration-300" />
             <img src="https://source.unsplash.com/featured/?zebra-blinds" alt="Zebra Blinds"
                  class="rounded-lg shadow-lg h-48 min-w-[180px] hover:scale-105 transition-transform duration-300" />
@@ -185,30 +190,30 @@
                 <!-- Zebra Blinds -->
                 <div class="product-card bg-white rounded-lg overflow-hidden shadow-md blinds-transition">
                     <div class="h-64 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1618221195710-dd6b41faaea6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1600&q=80" alt="Zebra Blinds" class="w-full h-full object-cover">
+                        <img src="/images/Home_Wooden_Blinds.png" alt="Wooden Blinds" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold mb-2">Zebra Blinds</h3>
-                        <p class="text-gray-600 mb-4">The perfect combination of sheer and privacy with alternating stripes that can be adjusted to control light and visibility.</p>
-                        <div class="flex justify-between items-center">
+                        <h3 class="text-xl font-bold mb-2 text_color_black">Wooden Blinds</h3>
+                        <p class="text-gray-600 mb-4" style="color: black;">Experience timeless elegance with <strong>Sonata Wooden Blinds</strong>, crafted with premium hardwood and expert precision. As a leading manufacturer in the blinds industry, we offer custom sizes, rich finishes, and smooth functionality. Perfect for homes and offices, our wooden blinds add warmth, style, and lasting durability to any space.</p>
+                        <!-- <div class="flex justify-between items-center">
                             <span class="text-amber-600 font-bold">Starting from ₹2,500</span>
                             <button class="bg-amber-600 hover:bg-amber-700 text-white px-4 py-2 rounded-full text-sm font-medium">View Details</button>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
                 <!-- Roller Blinds -->
                 <div class="product-card bg-white rounded-lg overflow-hidden shadow-md blinds-transition">
                     <div class="h-64 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1600566752227-8a1b3f108523?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1600&q=80" alt="Roller Blinds" class="w-full h-full object-cover">
+                        <img src="/images/Roller_hero_banner.png" alt="Roller Blinds" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold mb-2">Roller Blinds</h3>
-                        <p class="text-gray-600 mb-4">Simple, elegant and practical window covering that rolls up neatly when not in use. Available in various fabrics and patterns.</p>
-                        <div class="flex justify-between items-center">
+                        <h3 class="text-xl font-bold mb-2 text_color_black">Roller Blinds</h3>
+                        <p class="text-gray-600 mb-4" style="color: black;">Discover sleek and modern <strong>Sonata Wooden Blinds</strong>, designed for effortless style and functionality. Ideal for both homes and offices, our roller blinds offer smooth operation, light control, and a wide range of fabrics and finishes. Crafted with quality and precision by one of India’s leading blinds manufacturers.</p>
+                        <!-- <div class="flex justify-between items-center">
                             <span class="text-amber-600 font-bold">Starting from ₹1,800</span>
                             <button class="bg-amber-600 hover:bg-amber-700 text-white px-4 py-2 rounded-full text-sm font-medium">View Details</button>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
