--- a/blog.html
+++ b/blog.html
@@ -117,9 +117,9 @@
             <div class="bg-white border rounded-lg shadow hover:shadow-xl transition duration-300">
                 <img src="/images/blog1.jpg" alt="Blog Image" class="rounded-t-lg w-full h-48 object-cover" />
                 <div class="p-6">
-                    <h3 class="text-xl font-semibold mb-2">Top 5 Blinds for Modern Living Rooms</h3>
-                    <p class="text-gray-600 mb-4">Discover which blinds complement sleek, modern interiors with functionality and beauty.</p>
-                    <a href="#" class="text-amber-600 font-semibold hover:underline">Read More →</a>
+                    <h3 class="text-xl font-semibold mb-2">Wooden Blinds</h3>
+                    <p class="text-gray-600 mb-4">Bring timeless elegance and natural warmth to your interiors with our premium range of Wooden Blinds, proudly manufactured by Sonata Blinds – a trusted name and a leading force in India’s blinds industry.</p>
+                    <a href="/Wooden_Artical.html" class="text-amber-600 font-semibold hover:underline">Read More →</a>
                 </div>
             </div>
 
