--- a/blog.html
+++ b/blog.html
@@ -115,7 +115,7 @@
         <div class="grid md:grid-cols-3 gap-8">
             <!-- Blog Post -->
             <div class="bg-white border rounded-lg shadow hover:shadow-xl transition duration-300">
-                <img src="/images/blog1.jpg" alt="Blog Image" class="rounded-t-lg w-full h-48 object-cover" />
+                <img src="/images/Wooden_Hero_Banner.png" alt="Blog Image" class="rounded-t-lg w-full h-48 object-cover" />
                 <div class="p-6">
                     <h3 class="text-xl font-semibold mb-2">Wooden Blinds</h3>
                     <p class="text-gray-600 mb-4">Bring timeless elegance and natural warmth to your interiors with our premium range of Wooden Blinds, proudly manufactured by Sonata Blinds – a trusted name and a leading force in India’s blinds industry.</p>
