--- a/Wooden_Artical.html
+++ b/Wooden_Artical.html
@@ -129,7 +129,7 @@
            
         <img src="/images/Wooden_Hero_Banner.png" width="400" alt="Wooden Blinds" />
     
-        <h2>Premium Wooden Blinds – Crafted by Sonata Blinds in Noida</h2>
+        <h2><strong style="font-size: 28px;">Wooden Blinds – Crafted by Sonata Blinds in Noida</strong></h2>
         <p><strong>Bring timeless elegance and natural warmth to your interiors with our premium range of Wooden Blinds, proudly manufactured by Sonata Blinds – a trusted name and a leading force in India’s blinds industry.</strong></p>
         <br/>
         <br/>
