--- a/Wooden_Artical.html
+++ b/Wooden_Artical.html
@@ -129,7 +129,7 @@
            
         <img src="/images/Wooden_Hero_Banner.png" width="400" alt="Wooden Blinds" />
     
-        <h2><strong style="font-size: 28px;">Wooden Blinds – Crafted by Sonata Blinds in Noida</strong></h2>
+        <h2><strong style="font-size: 28px;">Wooden Blinds – Crafted by Sonata Blinds</strong></h2>
         <p><strong>Bring timeless elegance and natural warmth to your interiors with our premium range of Wooden Blinds, proudly manufactured by Sonata Blinds – a trusted name and a leading force in India’s blinds industry.</strong></p>
         <br/>
         <br/>
@@ -209,7 +209,7 @@
                         <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Zebra Blinds</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Roller Blinds</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Vertical Blinds</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Wooden Blinds</a></li>
+                        <li><a href="/Wooden_Artical.html" class="text-gray-400 hover:text-amber-600 transition">Wooden Blinds</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Motorized Blinds</a></li>
                     </ul>
                 </div>
