--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
                         <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Zebra Blinds</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Roller Blinds</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Vertical Blinds</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Wooden Blinds</a></li>
+                        <li><a href="/Wooden_Artical.html" class="text-gray-400 hover:text-amber-600 transition">Wooden Blinds</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Motorized Blinds</a></li>
                     </ul>
                 </div>
