--- a/Wooden_Artical.html
+++ b/Wooden_Artical.html
@@ -207,7 +207,7 @@
                     <h4 class="text-lg font-bold mb-4">Our Products</h4>
                     <ul class="space-y-2">
                         <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Zebra Blinds</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Roller Blinds</a></li>
+                        <li><a href="/Roller_Artical.html" class="text-gray-400 hover:text-amber-600 transition">Roller Blinds</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Vertical Blinds</a></li>
                         <li><a href="/Wooden_Artical.html" class="text-gray-400 hover:text-amber-600 transition">Wooden Blinds</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Motorized Blinds</a></li>
