--- a/blog.html
+++ b/blog.html
@@ -125,11 +125,11 @@
 
             <!-- Blog Post -->
             <div class="bg-white border rounded-lg shadow hover:shadow-xl transition duration-300">
-                <img src="/images/blog2.jpg" alt="Blog Image" class="rounded-t-lg w-full h-48 object-cover" />
+                <img src="/images/Roller_hero_banner.png" alt="Blog Image" class="rounded-t-lg w-full h-48 object-cover" />
                 <div class="p-6">
-                    <h3 class="text-xl font-semibold mb-2">How to Measure Your Windows for Perfect Blinds</h3>
-                    <p class="text-gray-600 mb-4">Avoid common measurement mistakes with our expert step-by-step guide.</p>
-                    <a href="#" class="text-amber-600 font-semibold hover:underline">Read More →</a>
+                    <h3 class="text-xl font-semibold mb-2">Roller Blinds</h3>
+                    <p class="text-gray-600 mb-4">Discover sleek and modern Sonata Roller Blinds, designed for effortless style and functionality. Ideal for both homes and offices, our roller blinds offer smooth operation, light control, and a wide range of fabrics and finishes. Crafted with quality and precision by one of India’s leading blinds manufacturers.</p>
+                    <a href="/Roller_Artical.html" class="text-amber-600 font-semibold hover:underline">Read More →</a>
                 </div>
             </div>
 
@@ -184,7 +184,7 @@
                     <h4 class="text-lg font-bold mb-4">Our Products</h4>
                     <ul class="space-y-2">
                         <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Zebra Blinds</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Roller Blinds</a></li>
+                        <li><a href="/Roller_Artical.html" class="text-gray-400 hover:text-amber-600 transition">Roller Blinds</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Vertical Blinds</a></li>
                         <li><a href="/Wooden_Artical.html" class="text-gray-400 hover:text-amber-600 transition">Wooden Blinds</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-amber-600 transition">Motorized Blinds</a></li>
