--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                  class="rounded-lg shadow-lg h-48 min-w-[180px] hover:scale-105 transition-transform duration-300" />
             <img src="/images/Roller_hero_banner.png" alt="Roller Blinds"
                  class="rounded-lg shadow-lg h-48 min-w-[180px] hover:scale-105 transition-transform duration-300" />
-            <img src="https://source.unsplash.com/featured/?zebra-blinds" alt="Zebra Blinds"
+            <img src="/images/Vertical_Blinds.png" alt="Vertical Blinds"
                  class="rounded-lg shadow-lg h-48 min-w-[180px] hover:scale-105 transition-transform duration-300" />
-            <img src="https://source.unsplash.com/featured/?curtains" alt="Curtains"
+            <img src="/images/Zebra_Blinds.png" alt="Zebra Blinds"
                  class="rounded-lg shadow-lg h-48 min-w-[180px] hover:scale-105 transition-transform duration-300" />
           </div>
         </div>
