--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
         <div class="container mx-auto px-4">
             <div class="flex flex-col lg:flex-row items-center">
                 <div class="lg:w-1/2 mb-8 lg:mb-0 lg:pr-12">
-                    <img src="https://images.unsplash.com/photo-1600566752227-17f0baa2a6c3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1600&q=80" alt="About Sonata Blinds" class="rounded-lg shadow-xl w-full">
+                    <img src="/images/Home_Wooden_Blinds.png" alt="About Sonata Blinds" class="rounded-lg shadow-xl w-full">
                 </div>
                 <div class="lg:w-1/2">
                     <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-6">About Sonata Blinds</h2>
