--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           </div>
       
           <!-- Carousel -->
-          <div class="flex gap-4 overflow-x-auto justify-center px-2">
+          <div class="flex gap-4 justify-center px-2">
             <img src="/images/Wooden_Hero_Banner.png" alt="Wooden Blinds"
                  class="rounded-lg shadow-lg h-48 min-w-[180px] hover:scale-105 transition-transform duration-300" />
             <img src="/images/Roller_hero_banner.png" alt="Roller Blinds"
