--- a/blog.html
+++ b/blog.html
@@ -99,6 +99,7 @@
             <a href="#home" class="block py-2 text-gray-700 hover:text-amber-600">Home</a>
             <a href="#products" class="block py-2 text-gray-700 hover:text-amber-600">Products</a>
             <a href="#about" class="block py-2 text-gray-700 hover:text-amber-600">About Us</a>
+            <a href="/blog.html" class="block py-2 text-gray-700 hover:text-amber-600">Updates</a>
             <a href="#testimonials" class="block py-2 text-gray-700 hover:text-amber-600">Testimonials</a>
             <a href="#contact" class="block py-2 text-gray-700 hover:text-amber-600">Contact</a>
         </div>
