wooden blinds meta data

--- a/Wooden_Artical_Noida.html
+++ b/Wooden_Artical_Noida.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog - Sonata Blinds</title>
-  <meta name="title" content="Sonata Blinds | Premium Window Coverings">
-  <meta name="description" content="Discover premium window treatment solutions with Sonata Blinds. Style, functionality, and top-quality wooden blinds for your home or office.">
+   <meta name="title" content="Wooden Blinds | Elegant & Durable Window Coverings by Sonata Blinds">
+    <meta name="description" content="Enhance your interiors with handcrafted wooden blinds from Sonata Blinds. Perfect balance of natural beauty, privacy, and light control for homes and offices.">
+    <meta name="keywords" content="Wooden Blinds,Wooden Blinds near Noida,Wooden Blinds in Adarsh Nagar,Wooden Blinds in Delhi">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="revisit-after" content="1 day">
+    <meta name="description" content="English">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
