zebra blog updated

--- a/Zebra_Artical.html
+++ b/Zebra_Artical.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog - Sonata Blinds</title>
-  <meta name="title" content="Sonata Blinds | Premium Window Coverings">
-  <meta name="description" content="Discover premium window treatment solutions with Sonata Blinds. Style, functionality, and top-quality wooden blinds for your home or office.">
+    <meta name="title" content="Zebra Blinds | Stylish & Versatile Light Control by Sonata Blinds">
+    <meta name="description" content="Upgrade your interiors with modern zebra blinds from Sonata Blinds. Enjoy stylish light filtering, privacy, and UV protection—perfect for both homes and offices.">
+    <meta name="keywords" content="Zebra Blinds,Zebra Blinds near Noida,Zebra Blinds in Adarsh Nagar,Zebra Blinds in Delhi,Stylish Window Blinds,Light Filtering Blinds">
 
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="revisit-after" content="1 day">
+    <meta name="description" content="English">
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.sonatablinds.com/">
@@ -70,6 +74,22 @@
             text-align: center;
             padding: 2rem;
         }
+        .artical_container {
+      max-width: 900px;
+      margin: 2rem auto;
+      background: white;
+      padding: 2rem;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    h2 {
+      color: #222;
+      margin-top: 1rem;
+    }
+    .artical_container img {
+      max-width: 100%;
+      border-radius: 8px;
+      margin-bottom: 1rem;
+    }
     </style>
 </head>
 <body class="bg-white text-gray-800">
@@ -99,7 +119,6 @@
             <a href="#home" class="block py-2 text-gray-700 hover:text-amber-600">Home</a>
             <a href="#products" class="block py-2 text-gray-700 hover:text-amber-600">Products</a>
             <a href="#about" class="block py-2 text-gray-700 hover:text-amber-600">About Us</a>
-            <a href="/blog.html" class="block py-2 text-gray-700 hover:text-amber-600">Updates</a>
             <a href="#testimonials" class="block py-2 text-gray-700 hover:text-amber-600">Testimonials</a>
             <a href="#contact" class="block py-2 text-gray-700 hover:text-amber-600">Contact</a>
         </div>
@@ -107,55 +126,60 @@
 
     <!-- Hero Banner -->
      <section class="text-white hero_Banner">
-        <h2 class="text-4xl md:text-6xl font-bold mb-4">Inspiration, Tips & Trends</h2>
-        <p class="text-lg">Stay updated with the latest ideas in interior design and window treatment solutions.</p>
+        <span class="text-4xl md:text-6xl font-bold mb-4">Zebra Blinds</span>
      </section>
 
-    <!-- Blog Posts -->
-    <section id="articles" class="py-16 px-4 container mx-auto">
-        <div class="grid md:grid-cols-3 gap-8">
-            <!-- Blog Post -->
-            <div class="bg-white border rounded-lg shadow hover:shadow-xl transition duration-300">
-                <img src="/images/Wooden_Hero_Banner.png" alt="Blog Image" class="rounded-t-lg w-full h-48 object-cover" />
-                <div class="p-6">
-                    <h3 class="text-xl font-semibold mb-2">Wooden Blinds</h3>
-                    <p class="text-gray-600 mb-4">Bring timeless elegance and natural warmth to your interiors with our premium range of Wooden Blinds, proudly manufactured by Sonata Blinds – a trusted name and a leading force in India’s blinds industry.</p>
-                    <a href="/Wooden_Artical.html" class="text-amber-600 font-semibold hover:underline">Read More →</a>
-                </div>
-            </div>
+     <main class="artical_container">
 
-            <!-- Blog Post -->
-            <div class="bg-white border rounded-lg shadow hover:shadow-xl transition duration-300">
-                <img src="/images/Roller_hero_banner.png" alt="Blog Image" class="rounded-t-lg w-full h-48 object-cover" />
-                <div class="p-6">
-                    <h3 class="text-xl font-semibold mb-2">Roller Blinds</h3>
-                    <p class="text-gray-600 mb-4">Discover sleek and modern Sonata Roller Blinds, designed for effortless style and functionality. Ideal for both homes and offices, our roller blinds offer smooth operation, light control, and a wide range of fabrics and finishes. Crafted with quality and precision by one of India’s leading blinds manufacturers.</p>
-                    <a href="/Roller_Artical.html" class="text-amber-600 font-semibold hover:underline">Read More →</a>
-                </div>
-            </div>
+    <img src="/images/Zebra_Blinds.png" width="400" alt="Zebra Blinds" />
 
-            <!-- Blog Post -->
-            <div class="bg-white border rounded-lg shadow hover:shadow-xl transition duration-300">
-                <img src="/images/Zebra_Blinds.png" alt="Zebra Blinds" class="rounded-t-lg w-full h-48 object-cover" />
-                <div class="p-6">
-                    <h3 class="text-xl font-semibold mb-2">The Benefits of Zebra Blinds</h3>
-                    <p class="text-gray-600 mb-4">Discover how zebra blinds blend modern design with practical light control and privacy solutions for every space.</p>
-                    <a href="/Zebra_Article.html" class="text-amber-600 font-semibold hover:underline">Read More →</a>
-                </div>
-            </div>
+    <h2><strong style="font-size: 28px;">Zebra Blinds – Elegance Meets Versatility by Sonata Blinds</strong></h2>
+    <p><strong>Transform your interiors with stylish, functional zebra blinds from Sonata Blinds – a trusted brand and one of India’s leading names in innovative window coverings.</strong></p>
+    <br/>
+    <br/>
 
-        </div>
-    </section>
+    <h2><strong>Blinds: Modern Light Control for Every Space</strong></h2>
+    <p>At Sonata Blinds, we offer premium zebra blinds that deliver the perfect blend of light control, privacy, and contemporary design. With alternating sheer and solid fabric layers, zebra blinds allow you to effortlessly shift from soft light filtering to full privacy, all in one sleek solution.</p>
+    <br/>
+    <br/>
 
-    <!-- Contact CTA -->
-    <section id="contact" class="bg-amber-50 py-16">
-        <div class="container mx-auto text-center">
-            <h3 class="text-3xl font-bold mb-4">Have a Project in Mind?</h3>
-            <p class="text-gray-600 mb-6">Get a free consultation or book a visit with our design experts today.</p>
-            <a href="/contact" class="bg-amber-600 hover:bg-amber-700 text-white py-3 px-8 rounded-full font-bold transition">Get a Quote</a>
-        </div>
-    </section>
+    <h2><strong>Why Choose Sonata Zebra Blinds?</strong></h2>
+    <p>
+        <strong>✅ Made in India </strong>by window covering specialists with over 10 years of expertise <br/>
 
+        <strong>🎨 Dual-Layered Design </strong>– Elegant stripes alternate between sheer and opaque for perfect lighting control <br/>
+
+        <strong>🛠️ Custom Sizes & Fit </strong>– Precision-made to match your window measurements <br/>
+
+        <strong>🎯 Smooth Operation </strong>– Easy chain-driven or motorized control options <br/>
+
+        <strong>☀️ Day & Night Use </strong>– Flexible usage with light filtering and privacy in one blind <br/>
+
+        <strong>🧼 Low Maintenance </strong>– Dust-resistant, durable fabric that’s easy to clean <br/>
+    </p>
+    <br/>
+    <br/>
+
+    <h2><strong>Customization Options:</strong></h2>
+    <p>
+        Fabric Types: Light Filtering / Blackout <br/>
+        Colors & Patterns: Wide range available to match your decor <br/>
+        Operation: Manual Chain / Motorized (Remote & Smart Home Ready) <br/>
+        Mount Type: Inside Mount / Outside Mount
+    </p>
+    <br/>
+    <br/>
+
+    <h2><strong>🏆 Why Sonata Blinds?</strong></h2>
+    <p>As a pioneer in designer blinds in India, <strong>Sonata Blinds</strong> offers a wide range of functional and aesthetic solutions at factory-direct prices. Trusted by architects, interior designers, and homeowners across the country, we focus on quality, durability, and complete customer satisfaction.</p>
+    <br/>
+    <br/>
+    <p class="meta">Published on May 24, 2025 by Sonata Blinds</p>
+
+</main>
+
+
+      
     <footer class="bg-gray-900 text-white py-12">
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
