--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Zebra Blinds -->
+                <!-- Wooden Blinds -->
                 <div class="product-card bg-white rounded-lg overflow-hidden shadow-md blinds-transition">
                     <div class="h-64 overflow-hidden">
                         <img src="/images/Home_Wooden_Blinds.png" alt="Wooden Blinds" class="w-full h-full object-cover">
@@ -218,35 +218,42 @@
                     </div>
                 </div>
 
-                <!-- Vertical Blinds -->
+                <!-- Zebra Blinds -->
                 <div class="product-card bg-white rounded-lg overflow-hidden shadow-md blinds-transition">
                     <div class="h-64 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1616486338812-3dadae4b4ace?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1600&q=80" alt="Vertical Blinds" class="w-full h-full object-cover">
+                        <img src="/images/Zebra_Blinds.png" alt="Zebra Blinds" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold mb-2">Vertical Blinds</h3>
-                        <p class="text-gray-600 mb-4">Ideal for large windows and sliding doors, these blinds offer excellent light control and come in various materials.</p>
-                        <div class="flex justify-between items-center">
-                            <span class="text-amber-600 font-bold">Starting from ₹2,200</span>
+                        <h3 class="text-xl font-bold mb-2 text_color_black">Zebra Blinds</h3>
+                        <p class="text-gray-600 mb-4" style="color: black;">
+                            Experience the perfect blend of elegance and utility with <strong>Sonata Zebra Blinds</strong>. These dual-layered blinds allow you to switch seamlessly between light filtering and privacy. Ideal for modern homes and workspaces, they offer custom fit, smooth operation, and day-night versatility—crafted by one of India’s most trusted blind manufacturers.
+                        </p>
+                        <!-- <div class="flex justify-between items-center">
+                            <span class="text-amber-600 font-bold">Starting from ₹2,100</span>
                             <button class="bg-amber-600 hover:bg-amber-700 text-white px-4 py-2 rounded-full text-sm font-medium">View Details</button>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
-                <!-- Venetian Blinds -->
+
+                <!-- Vertical Blinds -->
                 <div class="product-card bg-white rounded-lg overflow-hidden shadow-md blinds-transition">
                     <div class="h-64 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1600566753190-17f0baa2a6c3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1600&q=80" alt="Venetian Blinds" class="w-full h-full object-cover">
+                        <img src="/images/Vertical_Blinds.png" alt="Vertical Blinds" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold mb-2">Venetian Blinds</h3>
-                        <p class="text-gray-600 mb-4">Classic horizontal slats that can be tilted to control light and privacy. Available in aluminum, wood, and faux wood.</p>
-                        <div class="flex justify-between items-center">
-                            <span class="text-amber-600 font-bold">Starting from ₹2,800</span>
+                        <h3 class="text-xl font-bold mb-2 text_color_black">Vertical Blinds</h3>
+                        <p class="text-gray-600 mb-4" style="color: black;">
+                            Discover the perfect solution for large windows and sliding doors with <strong>Sonata Vertical Blinds</strong>. These stylish, durable blinds provide superior light control, privacy, and a sleek design that complements any space. Ideal for both home and office environments, they offer smooth operation, custom fit, and a wide range of fabric options—crafted with precision by one of India’s leading blind manufacturers.
+                        </p>
+                        <!-- <div class="flex justify-between items-center">
+                            <span class="text-amber-600 font-bold">Starting from ₹2,500</span>
                             <button class="bg-amber-600 hover:bg-amber-700 text-white px-4 py-2 rounded-full text-sm font-medium">View Details</button>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
+
+
 
                 <!-- Wooden Blinds -->
                 <div class="product-card bg-white rounded-lg overflow-hidden shadow-md blinds-transition">
